@@ -807,7 +807,6 @@ of some of those can be changed at compile time.
 &dollar(KDEDIR)/share/apps/kppp
 &dollar(KDEDIR)/share/apps/kppp/Rules
 &dollar(HOMEDIR)/.kde/share/apps/kppp
-&dollar(HOMEDIR)/.kde/share/apps/kppp/Costs
 &dollar(HOMEDIR)/.kde/share/apps/kppp/Rules/*.rst
 &dollar(HOMEDIR)/.kde/share/apps/kppp/Log/*
 &dollar(HOMEDIR)/.kde/share/config/kppprc
